# dairy_ninja

./: .env.example  .gitignore  .gitmodules  README.md  api.py  app.yaml  foundry.toml  pyproject.toml  remappings.txt  requirements.txt
.github/workflows/: api.yaml  test.yml
airnode/: config.json  receipt.json
script/: OrderHandlerDeploy.s.sol
src/: DairyNinjaModule.sol  OrderHandler.sol
src/interfaces/: IApi3Oracle.sol  IChronicleOracle.sol  ICowSettlement.sol  IGPv2AllowListAuthentication.sol  IGnosisSafe.sol  ISelfKiss.sol
test/: BaseFixture.sol  TestOracleFeed.t.sol  TestOrderSettlement.t.sol
