[tool.poetry]
name = "dairy-ninja"
version = "0.1.0"
description = ""
authors = ["Gosuto Inzasheru <gosuto@inzasheru.email>"]
readme = "README.md"
packages = [{include = "dairy_ninja"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
